// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HikeListPage should render correctly 1`] = `
<div>
  <Connect(HikeListFilter) />
  <HikeListItem
    hike={
      Object {
        "comments": null,
        "courses": Array [
          Object {
            "beginningOfStart": "2018-03-09T07:00:00",
            "checkPoints": null,
            "distance": 43320,
            "elevation": 1922,
            "endOfStart": "2018-03-09T08:00:00",
            "hikeId": 1,
            "id": 1,
            "limitTime": "11:00:00",
            "maxNumOfHikers": 100,
            "name": "Mátrahegy 40",
            "participations": null,
            "placeOfFinish": "Mátrafüred, Mátra Szakképző Iskola (Erdész u. 11.)",
            "placeOfStart": "Mátrafüred, Mátra Szakképző Iskola (Erdész u. 11.)",
            "price": 1000,
            "registerDeadline": "2018-03-08T00:00:00",
            "registrations": null,
          },
        ],
        "date": "2018-03-09T00:00:00",
        "description": "Mátrahegy telejsítménytúra",
        "id": 1,
        "name": "Mátrahegy",
        "organizer": null,
        "organizerId": 3,
        "staff": null,
        "website": "http://kekesturista.hu",
      }
    }
    key="1"
  />
  <HikeListItem
    hike={
      Object {
        "comments": null,
        "courses": Array [
          Object {
            "beginningOfStart": "2018-07-22T06:00:00",
            "checkPoints": null,
            "distance": 51400,
            "elevation": 1992,
            "endOfStart": "2018-07-22T08:00:00",
            "hikeId": 2,
            "id": 2,
            "limitTime": "12:00:00",
            "maxNumOfHikers": 60,
            "name": "Patai Mátra 50",
            "participations": null,
            "placeOfFinish": "Gyöngyöspata, általános iskola",
            "placeOfStart": "Gyöngyöspata, általános iskola",
            "price": 1600,
            "registerDeadline": "2018-07-21T00:00:00",
            "registrations": null,
          },
          Object {
            "beginningOfStart": "2018-07-22T06:00:00",
            "checkPoints": null,
            "distance": 34400,
            "elevation": 1338,
            "endOfStart": "2018-07-22T08:00:00",
            "hikeId": 2,
            "id": 3,
            "limitTime": "10:00:00",
            "maxNumOfHikers": 100,
            "name": "Patai Mátra 35",
            "participations": null,
            "placeOfFinish": "Gyöngyöspata, általános iskola",
            "placeOfStart": "Gyöngyöspata, általános iskola",
            "price": 1400,
            "registerDeadline": "2018-07-21T00:00:00",
            "registrations": null,
          },
        ],
        "date": "2018-07-22T00:00:00",
        "description": "Patai Mátra telejsítménytúra. Túra Gyöngyöspatáról 4 távon.",
        "id": 2,
        "name": "Patai Mátra",
        "organizer": null,
        "organizerId": 4,
        "staff": null,
        "website": "http://www.alfoldte.hu",
      }
    }
    key="2"
  />
  <HikeListItem
    hike={
      Object {
        "comments": null,
        "courses": Array [
          Object {
            "beginningOfStart": "2014-04-13T07:30:00",
            "checkPoints": null,
            "distance": 29750,
            "elevation": 915,
            "endOfStart": "2014-04-13T09:00:00",
            "hikeId": 3,
            "id": 4,
            "limitTime": "08:00:00",
            "maxNumOfHikers": 40,
            "name": "30 kilométeres táv.",
            "participations": null,
            "placeOfFinish": "Galgaguta, evangélikus templom melletti park",
            "placeOfStart": "Galgaguta, evangélikus templom melletti park",
            "price": 1200,
            "registerDeadline": "2014-04-10T00:00:00",
            "registrations": null,
          },
        ],
        "date": "2014-04-13T00:00:00",
        "description": "Andezit 30/15",
        "id": 3,
        "name": "Andezit",
        "organizer": null,
        "organizerId": 5,
        "staff": null,
        "website": "http://www.bthe.hu",
      }
    }
    key="3"
  />
</div>
`;

exports[`HikeListPage should render correctly while loading hikes 1`] = `
<p>
  Loading…
</p>
`;

exports[`HikeListPage should render correctly with errors 1`] = `
<p>
  Sorry! There was an error loading the items
</p>
`;
